--- a/html/tag.html
+++ b/html/tag.html
@@ -15,9 +15,8 @@
             <!-- Header -->
             <header class="mb-4 text-center">
                 <h1>Arthur Schnitzler – Tag für Tag</h1>
-                <p class="lead">
-                    Erkunden Sie die täglichen Bewegungen und Ereignisse im Leben von Arthur Schnitzler anhand von Geodaten.
-                    Nutzen Sie die Navigation, um zwischen den Tagen zu blättern.
+                <p class="lead">Lassen Sie sich die täglichen Aufenthaltsorte von Arthur Schnitzler (15. Mai 1862 – 21. Oktober 1931)
+                    anzeigen. Die Verbindungslinien sollen den geografischen Raum erfassbar machen, stellen aber keine Wegdiagramme dar.
                 </p>
                 <button id="toggle-intro" class="btn btn-outline-secondary">Einleitung ausblenden</button>
             </header>
