tag-für-tag website update

--- a/html/tag.html
+++ b/html/tag.html
@@ -16,7 +16,8 @@
             <header class="mb-4 text-center">
                 <h1>Arthur Schnitzler – Tag für Tag</h1>
                 <p class="lead">Lassen Sie sich die täglichen Aufenthaltsorte von Arthur Schnitzler (15. Mai 1862 – 21. Oktober 1931)
-                    anzeigen. Die Verbindungslinien sollen den geografischen Raum erfassbar machen, stellen aber keine Wegdiagramme dar.
+                    anzeigen. An Tagen, an denen er sich in Wien aufhält, wird auch angenommen, dass er sich in seiner jeweiligen
+                    Unterkunft aufhält. Die Verbindungslinien dienen dazu, geografischen Raum erfassbar zu machen. Sie stellen keine tatsächlichen Wegverläufe dar.
                 </p>
                 <button id="toggle-intro" class="btn btn-outline-secondary">X ausblenden</button>
             </header>
@@ -46,7 +47,7 @@
         
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="script_tag.js"></script>
+        <script src="./js/script_tag.js"></script>
         
         <script>
         // Toggle intro text visibility
