tag-für-tag website update

--- a/html/tag.html
+++ b/html/tag.html
@@ -16,8 +16,8 @@
             <header class="mb-4 text-center">
                 <h1>Arthur Schnitzler – Tag für Tag</h1>
                 <p class="lead">Lassen Sie sich die täglichen Aufenthaltsorte von Arthur Schnitzler (15. Mai 1862 – 21. Oktober 1931)
-                    anzeigen. An Tagen, an denen er sich in Wien aufhält, wird auch angenommen, dass er sich in seiner jeweiligen
-                    Unterkunft aufhält. Die Verbindungslinien dienen dazu, geografischen Raum erfassbar zu machen. Sie stellen keine tatsächlichen Wegverläufe dar.
+                    anzeigen. An Tagen, an denen er in Wien lebt, wird angenommen, dass er sich auch an seiner jeweiligen
+                    Wohnadresse aufhält. Die Verbindungslinien dienen dazu, geografischen Raum erfassbar zu machen. Sie stellen keine tatsächlichen Wegverläufe dar.
                 </p>
                 <button id="toggle-intro" class="btn btn-outline-secondary">X ausblenden</button>
             </header>
