--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <h1>Wiener Schnitzler – Schnitzlers Wien</h1>
-                <p>Arthur Schnitzler hat Wien nur einmal länger als für zwei Monate verlassen. Er wohnte zeitlebens in der
+                <p class="lead">Arthur Schnitzler hat Wien nur einmal länger als für zwei Monate verlassen. Er wohnte zeitlebens in der
                     Stadt, in der er 1862 geboren wurde, in der er 1931 starb und die er in den meisten seiner literarischen Werke schilderte. Durch sein <a href="https://schnitzler-tagebuch.acdh.oeaw.ac.at/" target="_blank">Tagebuch</a>,
                     seine <a href="" target="_blank">Korrespondenz</a> und andere Dokumente können wir über 
                     35.000 Aufenthalte an über 2.500 Orten bestimmen. So wird an ihm beispielhaft erfassbar, was
@@ -33,28 +33,7 @@
     <div id="footer"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        // Funktion, um Partials zu laden
-        function loadPartial(selector, filePath) {
-            fetch(filePath)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! Status: ${response.status}`);
-                    }
-                    return response.text();
-                })
-                .then(data => {
-                    document.querySelector(selector).innerHTML = data;
-                })
-                .catch(error => {
-                    console.error(`Error loading partial: ${filePath}`, error);
-                });
-        }
+    <script src="./js/partials.js"></script>
 
-        // Partials laden
-        loadPartial('#navbar', './partials/html_navbar.html');
-        loadPartial('#header', './partials/html_header.html');
-        loadPartial('#footer', './partials/html_footer.html');
-    </script>
-</body>
+    </body>
 </html>
