--- a/html/tag.html
+++ b/html/tag.html
@@ -11,13 +11,14 @@
     </style>
     </head>
     <body>
+        <div id="navbar"></div>
         <div class="container my-4">
-            <div id="navbar"></div>
+           
             <!-- Header -->
             <header class="mb-4 text-center">
                 <h1>Tag für Tag</h1>
                <!-- Info Button -->
-            <button type="button" class="btn btn-info info-button" data-bs-toggle="modal" data-bs-target="#introModal">i</button>
+            <button type="button" class="btn btn-info info-button" data-bs-toggle="modal" data-bs-target="#introModal">info</button>
 
             <!-- Modal -->
             <div class="modal fade" id="introModal" tabindex="-1" aria-labelledby="introModalLabel" aria-hidden="true">
@@ -69,10 +70,11 @@
             <!-- Map -->
             <div id="map"></div>
         </div>
-        <script src="./js/partials.js"></script>
+     
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="./js/script_tag.js"></script>
+        <script src="./js/partials.js"></script>
 
         <script>
         // Toggle intro text visibility
