--- a/html/tag.html
+++ b/html/tag.html
@@ -69,6 +69,9 @@
             
             <!-- Map -->
             <div id="map"></div>
+
+             <!-- Footer -->
+    <div id="footer"></div>
         </div>
      
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
