--- a/html/tag.html
+++ b/html/tag.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Arthur Schnitzler – Tag für Tag</title>
+        <title>Wiener Schnitzler – Tag</title>
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
         <style>
@@ -18,7 +18,10 @@
             <header class="mb-4 text-center">
                 <h1>Tag für Tag</h1>
                <!-- Info Button -->
-            <button type="button" class="btn btn-info info-button" data-bs-toggle="modal" data-bs-target="#introModal">info</button>
+            <button type="button" class="btn btn-info info-success" data-bs-toggle="modal" data-bs-target="#introModal">info</button>
+
+            <button id="schnitzler-chronik-btn" type="button" class="btn chronik-pill">Schnitzler Chronik</button>
+
 
             <!-- Modal -->
             <div class="modal fade" id="introModal" tabindex="-1" aria-labelledby="introModalLabel" aria-hidden="true">
@@ -57,8 +60,8 @@
                 
                 <div class="d-flex center-content-start">
                 <!-- Date Input (centered) -->
-                <input type="date" id="date-input" class="form-control w-auto" value="1903-01-01">
-                <button id="load-data" class="btn btn-primary">Laden</button>
+                <input type="date" id="date-input" class="form-control w-auto">
+                &#160; &#160;<button id="load-data" class="btn btn-light">Laden</button>
                 </div>
                 <!-- Right Buttons (rechts) -->
                 <div class="d-flex justify-content-end">
