--- a/html/index.html
+++ b/html/index.html
@@ -14,12 +14,15 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <h1>Wiener Schnitzler – Schnitzlers Wien</h1>
-                <p class="lead">Arthur Schnitzler hat Wien nur einmal länger als für zwei Monate verlassen. Er wohnte zeitlebens in der
-                    Stadt, in der er 1862 geboren wurde, in der er 1931 starb und die er in den meisten seiner literarischen Werke schilderte. Durch sein <a href="https://schnitzler-tagebuch.acdh.oeaw.ac.at/" target="_blank">Tagebuch</a>,
-                    seine <a href="" target="_blank">Korrespondenz</a> und andere Dokumente können wir über 
+                <p class="lead">Arthur Schnitzler kam 1862 in Wien auf die Welt und er starb 1931 in der Stadt,
+                    in der die meisten seiner literarischen Werke angesiedelt sind. Wien
+                    verließ er nur für Reisen und Sommeraufenthalte. Ein einziges Mal blieb er länger als zwei Monate fort.
+                    Durch sein <a href="https://schnitzler-tagebuch.acdh.oeaw.ac.at/" target="_blank">Tagebuch</a>,
+                    seine <a href="https://schnitzler-briefe.acdh.oeaw.ac.at/" target="_blank">Korrespondenz</a> und andere Dokumente können wir über 
                     35.000 Aufenthalte an über 2.500 Orten bestimmen. So wird an ihm beispielhaft erfassbar, was
                     derzeit für keine Zeitgenossin und keinen Zeitgenossen vorliegt: Der geographische Raum, 
                     in dem er sich bewegte, Orte, die er kannte, die ihm wichtig waren. Und im Gegenzug auch jene 
+                    Häuser, Straßen, 
                     Bezirke, Städte und Länder, die er nicht besuchte.
                 </p>
             </div>
