dies und das. und für’n peter die bezugnahme auf die farbe korrigiert

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <h1>Wiener Schnitzler – Schnitzlers Wien</h1>
-                <p class="lead">Arthur Schnitzler kam 1862 in Wien auf die Welt und er starb 1931 in der Stadt,
+                <p class="lead">Arthur Schnitzler kam 1862 in Wien auf die Welt und er starb 1931 in der selben Stadt,
                     in der die meisten seiner literarischen Werke angesiedelt sind. Wien
                     verließ er nur für Reisen und Sommeraufenthalte. Ein einziges Mal blieb er länger als zwei Monate fort.
                     Durch sein <a href="https://schnitzler-tagebuch.acdh.oeaw.ac.at/" target="_blank">Tagebuch</a>,
